--- a/test/Microsoft.TestCommon/Directory.Build.props
+++ b/test/Microsoft.TestCommon/Directory.Build.props
@@ -2,8 +2,8 @@
   <Import Project="..\Directory.Build.props" />
 
   <PropertyGroup>
-    <!-- Set base intermediate output path early for NETFX_Core but still exclude everything under the obj\ folder. -->
-    <BaseIntermediateOutputPath Condition=" '$(NetFX_Core)' == 'true' ">obj\ns2_0\</BaseIntermediateOutputPath>
+    <!-- Set base intermediate output path early for ns1_3 but still exclude everything under the obj\ folder. -->
+    <BaseIntermediateOutputPath Condition=" '$(Testing_NetStandard1_3)' == 'true' ">obj\ns1_3\</BaseIntermediateOutputPath>
     <DefaultItemExcludes>$(DefaultItemExcludes);obj\**</DefaultItemExcludes>
   </PropertyGroup>
 </Project>
