Remove RuntimePortable.sln - solution name no longer makes much sense and division adds little or no value - add .NET Standard projects to Runtime.sln - add solution filters for .NET Framework and .NET Standard projects - remove `$(BuildPortable)` property and `@(SolutionsToBuild)` item group

--- a/.codeql.yml
+++ b/.codeql.yml
@@ -57,7 +57,7 @@ jobs:
   - script: .\build.cmd EnableSkipStrongNames
     displayName: Windows Build - EnableSkipStrongNames
 
-  - script: .\build.cmd Build /p:BuildPortable=true
+  - script: .\build.cmd Build
     displayName: Windows Build
 
   - task: CodeQL3000Finalize@0
