Rename Formatting projects and more (#392)
* Rename `netstandard` Formatting projects
  - Formatting.NetCore and Formatting.NetStandard names no longer make sense

* Adjust `netstandard` Formatting output paths
  - align w/ new project names

* Use `NETSTANDARD1_3` and `Testing_NetStandard1_3`
  - `NETFX_CORE` name no longer makes much sense
  - remove both `NETFX_CORE` C# defined constant and `msbuild` property
    - manually-defined constant completely unnecessary in src/ code

* Remove RuntimePortable.sln
  - solution name no longer makes much sense and division adds little or no value
  - add .NET Standard projects to Runtime.sln
  - add solution filters for .NET Framework and .NET Standard projects
  - remove `$(BuildPortable)` property and `@(SolutionsToBuild)` item group

--- a/src/System.Net.Http.Formatting.ns1_3/System.Net.Http.Formatting.ns1_3.csproj
+++ b/src/System.Net.Http.Formatting.ns1_3/System.Net.Http.Formatting.ns1_3.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>netstandard1.3</TargetFramework>
     <RootNamespace>System.Net.Http</RootNamespace>
     <AssemblyName>System.Net.Http.Formatting</AssemblyName>
-    <OutputPath>$(OutputPath)NetCore\</OutputPath>
+    <OutputPath>$(OutputPath)ns1_3\</OutputPath>
     <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
     <RunCodeAnalysis>false</RunCodeAnalysis>
-    <DefineConstants>$(DefineConstants);ASPNETMVC;NETFX_CORE</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASPNETMVC</DefineConstants>
     <NoWarn>1591</NoWarn>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <Configurations>$(Configurations);CodeAnalysis</Configurations>
