Support `DBNull` in `netstandard1.3` assembly - available from the System.Data.Common package - extend `DBNull` testing to include `net6.0`   - s/NETCOREAPP/NETCOREAPP2_1/ where possible - fix comments in `HttpValueCollectionTest`   - comments about `DBNull` there were incorrect

--- a/src/System.Net.Http.Formatting.ns1_3/System.Net.Http.Formatting.ns1_3.csproj
+++ b/src/System.Net.Http.Formatting.ns1_3/System.Net.Http.Formatting.ns1_3.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
     <PackageReference Include="System.ComponentModel.EventBasedAsync" Version="4.3.0" />
+    <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Diagnostics.Contracts" Version="4.3.0" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
     <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
