!fixup! Add `$(System.JobId)` to artifact names - `publish` / `PublishPipelineArtifact@1` task doesn't overwrite an existing build artifact   - bit different from `PublishBuildArtifacts@1` - follow guidance at <https://learn.microsoft.com/en-us/azure/devops/pipelines/artifacts/pipeline-artifacts?view=azure-devops&tabs=yaml-task#q-can-i-delete-pipeline-artifacts-when-re-running-failed-jobs>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,7 +79,7 @@ jobs:
     displayName: Build
 
   - publish: ./bin/$(_Configuration)/Test/TestResults/
-    artifact: $(_Configuration) Test Results
+    artifact: $(_Configuration) Test Results $(System.JobId)
     condition: and(always(), ne(variables._BuildTarget, 'Build'))
     continueOnError: true
     displayName: Upload test results
@@ -95,6 +95,6 @@ jobs:
       testRunTitle: $(_Configuration)
 
   - publish: ./artifacts/
-    artifact: $(_Configuration) Logs
+    artifact: $(_Configuration) Logs $(System.JobId)
     condition: always()
     displayName: Upload logs
