--- a/azure-pipelines-public.yml
+++ b/azure-pipelines-public.yml
@@ -22,3 +22,9 @@ variables:
 
 trigger: [main]
 pr: ['*']
+
+stages:
+- stage: build
+  displayName: Build
+  jobs:
+  - template: /eng/templates/default-build.yml
