--- a/eng/templates/default-build.yml
+++ b/eng/templates/default-build.yml
@@ -49,8 +49,8 @@ jobs:
 
   - script: .\build.cmd EnableSkipStrongNames
     displayName: Enable SkipStrongNames
-  - script: .\build.cmd $(_BuildTarget)
-      binaryLogger:artifacts/msbuild.binlog /p:Configuration=$(_Configuration) /p:StyleCopEnabled=$(_StyleCopEnabled)
+  - script: .\build.cmd $(_BuildTarget) ^
+      /binaryLogger:artifacts/msbuild.binlog /p:Configuration=$(_Configuration) /p:StyleCopEnabled=$(_StyleCopEnabled) ^
       /fileLoggerParameters:LogFile=artifacts/msbuild.log;Summary;Verbosity=minimal
     displayName: Build
 
