Switch to 1es template (#416)
* Remove Codeql3000

* Switch to 1es templates

* Fix publish

* Fix nuget.config

* ^

* BL

* public stage

* No binlog

* params

* Fix it again

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,78 +23,26 @@ variables:
 trigger: [main]
 pr: ['*']
 
-jobs:
-- job: build
-  displayName: Build
-  pool:
-    ${{ if eq(variables['System.TeamProject'], 'public') }}:
-      name: NetCore-Svc-Public
-      demands: ImageOverride -equals windows.vs2019.amd64.open
-    ${{ else }}:
+resources:
+  repositories:
+  # Repo: 1ESPipelineTemplates/1ESPipelineTemplates
+  - repository: 1esPipelines
+    type: git
+    name: 1ESPipelineTemplates/1ESPipelineTemplates
+    ref: refs/tags/release
+
+extends:
+  template: v1/1ES.Official.PipelineTemplate.yml@1esPipelines
+  parameters:
+    pool:
       name: NetCore1ESPool-Svc-Internal
-      demands: ImageOverride -equals windows.vs2019.amd64
-  timeoutInMinutes: 30
-
-  strategy:
-    matrix:
-      Release:
-        _BuildTarget: ${{ parameters.ReleaseBuildTarget }}
-        _Configuration: Release
-        _StyleCopEnabled: true
-        # Do CG work only in internal pipelines.
-        skipComponentGovernanceDetection: ${{ eq(variables['System.TeamProject'], 'public') }}
-      Debug:
-        _BuildTarget: ${{ parameters.OtherBuildTarget }}
-        _Configuration: Debug
-        _StyleCopEnabled: false
-        # Do not redo CG work. Configuration changes in this part of the matrix are not relevant to CG.
-        skipComponentGovernanceDetection: true
-      CodeAnalysis:
-        _BuildTarget: ${{ parameters.OtherBuildTarget }}
-        _Configuration: CodeAnalysis
-        _StyleCopEnabled: false
-        # Do not redo CG work. Configuration changes in this part of the matrix are not relevant to CG.
-        skipComponentGovernanceDetection: true
-
-  steps:
-  - checkout: self
-    clean: true
-    displayName: Checkout
-
-  - task: UseDotNet@2
-    displayName: Get .NET SDK
-    inputs:
-      useGlobalJson: true
-  - task: UseDotNet@2
-    displayName: Get .NET 2.1 runtime
-    inputs:
-      packageType: runtime
-      version: '2.1.x'
-
-  - script: .\build.cmd EnableSkipStrongNames
-    displayName: Enable SkipStrongNames
-  - script: .\build.cmd $(_BuildTarget) ^
-      /binaryLogger:artifacts/msbuild.binlog /p:Configuration=$(_Configuration) /p:StyleCopEnabled=$(_StyleCopEnabled) ^
-      /fileLoggerParameters:LogFile=artifacts/msbuild.log;Summary;Verbosity=minimal
-    displayName: Build
-
-  - publish: ./bin/$(_Configuration)/Test/TestResults/
-    artifact: $(_Configuration) Test Results $(System.JobId)
-    condition: and(always(), ne(variables._BuildTarget, 'Build'))
-    continueOnError: true
-    displayName: Upload test results
-  - task: PublishTestResults@2
-    condition: and(always(), ne(variables._BuildTarget, 'Build'))
-    continueOnError: true
-    displayName: Publish test results
-    inputs:
-      mergeTestResults: true
-      searchFolder: ./bin/$(_Configuration)/Test/TestResults/
-      testResultsFiles: '*.xml'
-      testRunner: xUnit
-      testRunTitle: $(_Configuration)
-
-  - publish: ./artifacts/
-    artifact: $(_Configuration) Logs $(System.JobId)
-    condition: always()
-    displayName: Upload logs
+      image: 1es-windows-2019-pt
+      os: windows
+    stages:
+    - stage: build
+      displayName: Build
+      jobs:
+      - template: /eng/templates/default-build.yml@self
+        parameters:
+          ReleaseBuildTarget: ${{ parameters.ReleaseBuildTarget }}
+          OtherBuildTarget: ${{ parameters.OtherBuildTarget }}
