Skip tests in internal builds

--- a/azure-pipelines-public.yml
+++ b/azure-pipelines-public.yml
@@ -31,3 +31,4 @@ stages:
     parameters:
       ReleaseBuildTarget: ${{ parameters.ReleaseBuildTarget }}
       OtherBuildTarget: ${{ parameters.OtherBuildTarget }}
+      InternalBuild: false
