--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,3 +51,4 @@ extends:
         parameters:
           ReleaseBuildTarget: ${{ parameters.ReleaseBuildTarget }}
           OtherBuildTarget: ${{ parameters.OtherBuildTarget }}
+          InternalBuild: true
